--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 # testing
 /coverage
 
-# production
+# production builds
 /Frontend Code/sensor-dashboard/build
 
 # misc
@@ -22,3 +22,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ----- ENSURE THESE FOLDERS ARE INCLUDED -----
+
+# Do NOT ignore these important folders
+!Arduino Code/
+!AWS Lambda Code/
+!Controller Code/
